<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:fillViewport="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".Activity2">

        <ImageView
            android:id="@+id/pic1"
            android:layout_width="wrap_content"
            android:layout_height="170dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:src="@drawable/question1" />

        <TextView
            android:id="@+id/question1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pic1"
            android:text="@string/Question1" />

        <LinearLayout
            android:id="@+id/option1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/question1"
            android:layout_centerHorizontal="true">

            <RadioGroup
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/q1a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:text="@string/a"
                    android:textSize="25sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:text="@string/b"
                    android:textSize="25sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:text="@string/c"
                    android:textSize="25sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:text="@string/d"
                    android:textSize="25sp" />
            </RadioGroup>
        </LinearLayout>

        <ImageView
            android:id="@+id/pic2"
            android:layout_width="wrap_content"
            android:layout_height="170dp"
            android:layout_below="@id/option1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:src="@drawable/question2" />

        <TextView
            android:id="@+id/question2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/pic2"
            android:text="@string/Question2"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/option2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/question2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp">

            <RadioGroup
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:text="@string/a"
                    android:textSize="25sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:text="@string/b"
                    android:textSize="25sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:text="@string/c"
                    android:textSize="25sp" />

                <RadioButton
                    android:id="@+id/q2d"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:text="@string/d"
                    android:textSize="25sp" />
            </RadioGroup>
        </LinearLayout>

        <ImageView
            android:id="@+id/pic3"
            android:layout_width="wrap_content"
            android:layout_height="170dp"
            android:layout_below="@id/option2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:src="@drawable/question3" />

        <TextView
            android:id="@+id/question3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pic3"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/Question3"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/option3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/question3"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp">

            <RadioGroup
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_10kg"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/q3b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_20kg"
                    android:textSize="20sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_30kg"
                    android:textSize="20sp" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_40kg"
                    android:textSize="20sp" />
            </RadioGroup>
        </LinearLayout>

        <ImageView
            android:id="@+id/pic4"
            android:layout_width="wrap_content"
            android:layout_height="170dp"
            android:layout_below="@id/option3"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:src="@drawable/question5" />

        <TextView
            android:id="@+id/question4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/pic4"
            android:text="@string/Question4" />

        <LinearLayout
            android:id="@+id/option4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/question4"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/option2_a"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/q4a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:text="@string/green_blue" />

                <CheckBox
                    android:id="@+id/q4b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:text="@string/green_pink" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/q4c"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:text="@string/blue_purple" />

                <CheckBox
                    android:id="@+id/q4d"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="15dp"
                    android:text="@string/yellow_red" />

            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:id="@+id/pic5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/option4"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:src="@drawable/question6" />

        <TextView
            android:id="@+id/question5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/pic5"
            android:text="@string/question5" />

        <EditText
            android:id="@+id/answer5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/question5"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/answer5"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_transparen"
            android:onClick="count"
            android:text="@string/finish" />

    </RelativeLayout>

</ScrollView>